force-app/main/default/objects/QR_Export__c/QR_Export__c.object-meta.xml
<CustomObject>
    <description>Tracks requests for export of QR scan data</description>
    <label>QR Export</label>
    <nameField>
        <label>QR Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QR Exports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>