force-app/main/default/objects/QR_Export__c/fields/Export_File__c.field-meta.xml
<CustomField>
    <fullName>Export_File__c</fullName>
    <description
  >The URL (privileged access) of the export. Export files are stored on AWS S3 where access can be controlled easily.</description>
    <label>Export File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>