force-app/main/default/objects/QR_Export__c/fields/Export_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Status__c</fullName>
    <description
  >Records all recipients upon successful export, or the error detail upon failure.</description>
    <label>Export Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>