force-app/main/default/objects/QR_Export__c/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <description
  >The type of export requested ex. &apos;Team&apos; or &apos;Individual&apos;</description>
    <label>Export Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>