force-app/main/default/objects/QR_Export__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <description>Time the QR Export was initiated</description>
    <label>Request Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>