force-app/main/default/objects/QR_Export__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <description>The contact requesting the QR export</description>
    <label>Requestor</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>QR Exports</relationshipLabel>
    <relationshipName>QR_Exports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>